# UAV_Research_Stay

./: README.md  prueba.txt
Hexa_nov_V2/: CMakeLists.txt  package.xml
Hexa_nov_V2/config/: joint_names_Hexa_nov_V2.yaml
Hexa_nov_V2/launch/: display.launch  gazebo.launch  load_box.launch
Hexa_nov_V2/meshes/: Propeller2.STL  Propeller3.STL  Propeller5.STL  Spur-rack2.STL
Hexa_nov_V2/models/: box.config  box.sdf
Hexa_nov_V2/urdf/: Hexa_nov_V2.csv  Hexa_nov_V2.urdf  camera.sdf  hexa_Nov_V3_2022.urdf  hexa_nov_v2.sdf  hexaflat.sdf  hexaflat_2211.sdf  hexaflat_2311.sdf  hexaflat_2511.sdf  hexaflat_2511_v2.sdf
PX4-Autopilot-model/: 3012_hexaflat  hexaflat.sdf  hexaflat.world  instructions.txt  model.config
PX4-Autopilot-model/carga_util/: model.config  model.sdf
PX4-Autopilot-model/meshes/: Spur-rack1.stl  prop_ccw_hexaflat.stl  prop_cw_hexaflat.stl
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/include/: UAV.hpp
beginner_tutorials/launch/: launch.launch
beginner_tutorials/src/: ref.cpp  talker.cpp
hexa_urdf/: CMakeLists.txt  package.xml
hexa_urdf/config/: joint_names_hexa_urdf.yaml
hexa_urdf/launch/: display.launch  gazebo.launch  spawn_uav.launch
hexa_urdf/meshes/: Propeller4.STL  Propeller5.STL  Propeller6.STL  Spur_gear.STL  Spur_rack1.STL  Spur_rack2.STL
hexa_urdf/urdf/: hexa_urdf.csv  hexa_urdf.sdf  hexa_urdf.urdf
offboard_py/: package.xml
uav_control/: CMakeLists.txt  package.xml
uav_control/include/: UAV.hpp
uav_control/launch/: helicoidal_pid.launch  lemniscate_6dof_pid.launch  mavros.launch  offboard_sim1.launch  sim_flat_tray1.launch  sim_tilt_tray1.launch  simulation_4dof_tray1.launch  trajectory_1.launch
uav_control/src/: gazebo_broadcaster.cpp  helicoidal.cpp  hexa_6dof_dynamics.cpp  maquina_estados.py  payload_control.cpp  pid_control_4dof.cpp  pid_control_6dof.cpp  px4_communication.cpp  simple_gripper.cpp  simple_gripper.py  smc_control_6dof.cpp  trajectory_1.cpp  waypoints.cpp  waypoints.py
uav_ibvs/: CMakeLists.txt  package.xml
uav_ibvs/scripts/: analisis.py  arucos.py
uav_px4_control/: CMakeLists.txt  package.xml
uav_px4_control/include/: offboard_simulation1.launch
uav_px4_control/src/: offb_node.cpp
uav_switch/: CMakeLists.txt  package.xml
uav_switch/launch/: switch.launch
uav_switch/scripts/: operador.py  switch.py
uav_trajectory/: CMakeLists.txt  package.xml
uav_trajectory/src/: lemniscate.cpp  trajectory_takefoff_landing.cpp
