<?xml version="1.0"?>
<package format="2">
  <name>uav_px4_control</name>
  <version>0.0.0</version>
  <description>The uav_px4_control package</description>

  <maintainer email="adanmarquez200@outlook.com">Adan Marquez</maintainer>
  <license>BSD</license>
  <author email="adanmarquez200@outlook.com">Adan Marquez</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
 </package>
